Исправил ошибки, user добавляется в бд, дальше надо сделать добавление person

--- a/Vsety/Views/Home/Autorisation.cshtml
+++ b/Vsety/Views/Home/Autorisation.cshtml
@@ -15,7 +15,7 @@
             <a href="#" class="forgot-password">Забыли пароль?</a>
         </div>
         <button type="submit" class="btn btn-primary">Войти</button>
-        <a asp-area="" asp-controller="Account" asp-action="Register">
+        <a asp-area="" asp-controller="Account" asp-action="RegisterView">
             <button type="button" class="btn btn-secondary">Зарегистрироваться</button>
         </a>
     </div>
