--- a/Vsety/Views/Account/RegisterView.cshtml
+++ b/Vsety/Views/Account/RegisterView.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container registration">
     <div class="auth-box">
-        <form asp-action="Register" asp-controller="Account" method="post">
+        <form asp-action="RegisterView" asp-controller="Account" method="post">
             <div class="logo">
                 <h1>Регистрация</h1>
             </div>
