--- a/Vsety/Views/_ViewImports.cshtml
+++ b/Vsety/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WebApplication4
-@using WebApplication4.Models
+﻿@using Vsety
+@using Vsety.Core.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
