--- a/Vsety/Views/Account/RegisterView.cshtml
+++ b/Vsety/Views/Account/RegisterView.cshtml
@@ -1,4 +1,4 @@
-﻿@using Vsety.Core.Models.ViewModels
+﻿@using Vsety.Core.Models.ViewModel
 @model RegisterViewModel
 @{
     ViewData["Title"] = "Register";
