--- a/Vsety/Views/Home/Index.cshtml
+++ b/Vsety/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                 <div class="person1 flex-nowrap">
 
                     <img src="/img/stockphoto.jpg" class="rounded-circle" alt="Фото не найдено" />
-                    <a asp-area="" asp-controller="Home" asp-action="Autorisation" style="text-decoration: none; color:blue ;">Войдите или зарегистрируйтесь</a>
+                    <a asp-area="" asp-controller="Account" asp-action="Autorisation" style="text-decoration: none; color:blue ;">Войдите или зарегистрируйтесь</a>
 
                 </div>
             </div>
