--- a/Vsety/wwwroot/css/Register.css
+++ b/Vsety/wwwroot/css/Register.css
@@ -24,6 +24,28 @@
     margin-bottom: 20px;
 }
 
+.avatar-label {
+    cursor: pointer;
+    display: inline-block;
+}
+
+.avatar-image {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #ced4da;
+    transition: border-color 0.3s ease;
+}
+
+.avatar-label:hover .avatar-image {
+    border-color: #007bff;
+}
+
+#avatar-upload {
+    display: none;
+}
+
 .form-control {
     width: 100%;
     padding: 10px;
@@ -32,7 +54,13 @@
     margin-bottom: 15px;
     box-sizing: border-box;
     font-size: 16px;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
+
+    .form-control:focus {
+        border-color: #007bff;
+        box-shadow: 0px 0px 5px rgba(0, 123, 255, 0.5);
+    }
 
 .btn {
     width: 100%;
@@ -40,6 +68,7 @@
     border-radius: 10px;
     margin-bottom: 10px;
     font-size: 16px;
+    transition: background-color 0.3s ease;
 }
 
 .btn-primary {
@@ -66,3 +95,20 @@
         .existing-account a:hover {
             color: #0056b3;
         }
+
+.dropdown-menu {
+    width: 100%;
+    margin-top: 2px;
+    border-radius: 10px;
+}
+
+.dropdown-item {
+    font-size: 16px;
+    padding: 10px;
+    transition: background-color 0.3s ease;
+}
+
+    .dropdown-item:hover {
+        background-color: #f8f9fa;
+        cursor: pointer;
+    }
