--- a/Vsety/Views/Home/Index.cshtml
+++ b/Vsety/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Vsety.Core.Models.ViewModel;
+@model IndexViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -33,8 +35,18 @@
                     </ul>
                 </div>-->
                 <div class="person1 flex-nowrap">
-
-                    <img src="/img/stockphoto.jpg" class="rounded-circle" alt="Фото не найдено" />
+                    
+                    @if (Model != null)
+                    {
+                        @if (Model.User.Person.avatarPath != null)
+                        {
+                            <img src="@Model.User.Person.avatarPath.Path" alt="Avatar" class="rounded-circle avatar-image" id="avatar-preview">
+                        }
+                    }
+                    else
+                    {
+                        <img src="/img/stockphoto.jpg" alt="Avatar" class="rounded-circle avatar-image" id="avatar-preview">
+                    }
                     <a asp-area="" asp-controller="Account" asp-action="Autorisation" style="text-decoration: none; color:blue ;">Войдите или зарегистрируйтесь</a>
 
                 </div>
@@ -80,12 +92,24 @@
         </div>
         <div class="col-sm">
             <div class="input-group" style="padding: 5px 0;">
-                <img src="/img/stockphoto.jpg" id="photo1" class="rounded-circle" width="30" height="30" alt="Фото не найдено"/>
+                @if (Model != null)
+                {
+                    @if (Model.User.Person.avatarPath != null)
+                    {
+                        <img src="@Model.User.Person.avatarPath.Path" alt="Avatar" class="rounded-circle avatar-image" id="photo1">
+                    }
+                }
+                else
+                {
+                    <img src="/img/stockphoto.jpg" alt="Avatar" class="rounded-circle avatar-image" id="photo1">
+                }
                 <input type="text" class="form-control" placeholder="Добавить запись" aria-label="Добавить запись" aria-describedby="basic-addon1">
                 <div style="padding-bottom: 10px">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-paperclip" viewBox="0 0 16 16">
+                    <svg for="avatar-upload" style="cursor: pointer" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-paperclip" viewBox="0 0 16 16">
+                        
                         <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0z" />
                     </svg>
+                    <input type="file" id="avatar-upload" name="avatar" accept="image/*" class="form-control-file">
                 </div>
             </div>
             <div class="card">
