--- a/vsety.frontend/src/app/Home/page.css
+++ b/vsety.frontend/src/app/Home/page.css
@@ -1,120 +1,7 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f2f5;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    display: grid;
-    grid-template-columns: auto 500px auto;
-    
-    justify-content: center;
-
-    align-items: center;
-    background-color: #ffffff;
-    padding: 10px 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.logo img {
-    
-}
-
-.search-bar input {
-    width: 250px;
-    height: 20px;
-    padding: 5px;
-    border-radius: 10px;
-    border: 1px solid #ebeaea;
-    outline: none;
-    background-color: rgb(255, 255, 255);;
-}
-
-.profile-icon img {
-    
-    border-radius: 50%;
-}
-
-main {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.post {
-    background-color: #ffffff;
-    width: 500px;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    margin-bottom: 20px;
-}
-
-.post-header {
-    display: flex;
-    align-items: center;
-}
-
-.avatar {
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-
-.post-info h2 {
-    margin: 0;
-    font-size: 18px;
-}
-
-.post-info span {
-    font-size: 12px;
-    color: #777;
-}
-
-.post-image img {
-    width: 100%;
-    border-radius: 10px;
-    margin: 15px 0;
-}
-
-.post-text {
-    font-size: 16px;
-    margin-bottom: 10px;
-}
-
-.post-actions {
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 10px;
-}
-
-.post-actions button {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 18px;
-}
-
-.comment {
-    display: flex;
-    align-items: flex-start;
-    margin-top: 10px;
-    padding-top: 10px;
-    border-top: 1px solid #eee;
-}
-
-.comment-info h3 {
-    margin: 0;
-    font-size: 14px;
-}
-
-.comment-info span {
-    font-size: 12px;
-    color: #777;
-}
-
-.comment-text {
-    margin-top: 5px;
-    font-size: 14px;
-}
+.stroke-red {
+    stroke: red;
+  }
+  
+  .fill-pink {
+    fill: pink;
+  }
