--- a/vsety.frontend/src/app/Login/Autorisation.css
+++ b/vsety.frontend/src/app/Login/Autorisation.css
@@ -11,7 +11,7 @@
 .registration {
     
     display: grid;
-    grid-template-columns: 1fr 300px;
+    grid-template-columns: 400px 300px;
 
     height: 500px;
     width: 700px;
